--- a/2. Essential Commands.md
+++ b/2. Essential Commands.md
@@ -75,68 +75,81 @@ Considerations:
 
 ### 2.08. Create and manage soft links
 
-- hard link points to an Inode
-- soft link is just a file that points to another file,
+- hard link points to an Inode, Inode points to bytes on drive
+- soft link (symbolic link)is just a file that points to a path,
 - soft link can be linked both to files and directories
-- `ls -s target_file link_file`
-- `ls -l` or `readlink link_file` to see the actual link
+- `ls -s [TARGET-FILE] [LINKED-FILE]`
+- `ls -l` or `readlink [LINKED-FILE]` to see the actual link
 
 ### 2.09. Lab: Files, directories, hard and soft links
 
 ### 2.10. List, set, and change standard file permissions
 
-- owners/groups any file/directory is owned by user, only owner can change permissions. Root user can change all permissions.
-- `chgrp group-name file/directoy-name` to change group for the file
-- we can only change to groups, to which user is part of
-- `groups [username]` - to see which groups user is part of
-- `sudo chwon user-name file/directoy-name` to change owner of the file directory. Only root can change owner
-- `sudo chwon user-name:group-name file/directoy-name` to change owner and group for the file/directory. Only root command.
-- `ls -l` also shows permissions for the file/directory: type-owner-group-others
-- type:
-  - `d` - directory
-  - `-` - file
-  - `c` - character device
-  - `l` - link
-  - `s` - socket file
-  - `p` - pipe
-  - `b` - block device
-- permissions for file - user(owner)-group-others:
-  - read 4
-  - write 2
-  - execute 1
-- permissions for folder - user(owner)-group-others:
+- every file/directory is owned by user, only owner if the file/directory can change permissions. Root user can change all permissions.
+- `chgrp [GROUP] [FILE/DIRECTOY]` to change group for the file/directory
+  - we can only change to groups, to which user is part of
+- `groups [USER]` - to see which groups user is part of
+- `sudo chwon [USER] [FILE/DIRECTOY]` to change owner.  root command
+- `sudo chwon [USER]:[GROUP] [FILE/DIRECTOY]` to change owner and group for the file/directory.  root command.
 
-  - read contents directory (for example, `ls`)
-  - write to directory (for example, to add/delete files in directory)
-  - execute into directory (for example, to `cd` into directory)
-- Permissions are evaluated from left to write, meaning if owner has lower set of permissions, than group (where he is part of), he will have only the lower set of permissions
-- `chmod permissions file/folder`
-  - `chmod u+rw cat.jpg` - to add permissions
-  - `chmod u-w cat.jpg` - to remove permissions
-  - `chmod u=rw cat.jpg` - to set permissions
-  - `chmod 770 cat.jpg` - to set permissions
+- `ls -l` also shows permissions for the file/directory: type-user-group-others
+
+Types:
+
+- `d` - directory
+- `-` - regular file
+- `c` - character device
+- `l` - link
+- `s` - socket file
+- `p` - pipe
+- `b` - block device
+
+permissions for file:
+
+- read 4
+- write 2
+- execute 1
+
+permissions for directories:
+
+- read contents directory (for example, `ls`)
+- write to directory (for example, to add/delete files in directory)
+- execute into directory (for example, to `cd` into directory)
+
+Permissions are evaluated from left to write, meaning if owner has lower set of permissions, than group (where he is part of), he will have only the lower set of permissions.
+
+`chmod permissions file/folder`
+
+- `chmod u+rw cat.jpg` - add permissions
+- `chmod u-w cat.jpg` - to remove permissions
+- `chmod u=rw cat.jpg` - to set permissions
+- `chmod u= cat.jpg` - removes all permissions for user `-`
+- `chmod u=rw,g+w,o= cat.jpg` - to set permissions for different types
+- `chmod 770 cat.jpg` - to set permissions
 
 ### 2.11. SUID, SGID, and Sticky Bit
 
-- SUID - Set User ID - when file is executed it will be executed as SUID not as person running it
-  - `chmod 4664 filename`
-  - `chmod 4764 filename`
+SUID - Set User ID - when file is executed it will be executed as SUID not as person running it:
+
+- `chmod 4664 filename`
+- `chmod 4764 filename`
 
 ![SUID](2022-04-28-14-35-18.png)
 
-- SGID - Set Group ID
-  - `chmod 2664 filename`
-  - `chmod 2674 filename`
+SGID - Set Group ID:
+
+- `chmod 2664 filename`
+- `chmod 2674 filename`
 
 ![SGID](2022-04-28-14-37-39.png)
 
-Possible to specify both SUID and SGID using - `chmod 6xxx filename`
+Possible to specify both SUID and SGID using - `chmod +6000 filename`
 
-- Sticky Bit - specified on shared directory, which allows only a user that owns a file in a directory to remove that file.
+Sticky Bit - specified on shared directory, which allows only a user that owns a file in a directory to remove that file.
 
-  - `mkdir stickydir`
-  - `chmod +t stickydir` or
-  - `chmod 1777 stickydir`
+- `mkdir stickydir`
+- `chmod +t stickydir` or
+- `chmod 1777 stickydir`
 
 ![sticky](2022-04-28-14-44-40.png)
 
@@ -144,10 +157,13 @@ Possible to specify both SUID and SGID using - `chmod 6xxx filename`
 
 - `find [path/to/directory] [parameters]
   - if no [path/to/directory] then searched in current working directory
+
 - `find /usr/share/ -name '*.jpg'` - wildcard
 - `find /bin/ -name 'file1.txt'`
 - `find /bin/ -iname -'FileName'` - case insensitive
+
 - `find /lib64/ -size +10M`
+
 - `find /lib64/ -perm 664` - search based on exact permissions
 - `find /lib64/ -perm u=rw,g=rw,o=r` - search based on exact permissions
 - `find /lib64/ -perm -664` - search based on at least permissions
@@ -155,18 +171,20 @@ Possible to specify both SUID and SGID using - `chmod 6xxx filename`
 - `find /lib64/ -not -perm 664` - search based on NOT permissions
 
 - `find /dev/ -mmin -1` - modified within last minute
-- `find /dev/ -mtime 0` - modified within last 24 hours
-- `find /dev/ -mtime 1` - modified within last 24 and 48 hours
+- `find /dev/ -mtime 0` - modified b/w last 24 hours
+- `find /dev/ -mtime 1` - modified b/w last 24 and 48 hours
+- `find /dev/ -cmin -5` - changed within (-5,0).
+- `find /dev/ -cmin 5` - changed exactly 5 min ago.
+- `find /dev/ -cmin +5` - changed (-inf, -5).
+
 - `find /dev/ -name 'f*' -size 512k` -  operators AND
 - `find /dev/ -name 'f*' -o -size 512k` - combine operators OR
 - `find /dev/ -not -name 'f*'` - NOT operator
 
-Modified Time != Changed time
+Modified Time != Changed time:
 
 - Modified = created or edited file
 - Changed = metadata change (for example, permissions)
-
-- `find /dev/ -cmin -5` - changed within last 5 min.
 
 ### 2.13. Lab: File Permissions, Search for files
 
@@ -181,8 +199,8 @@ Modified Time != Changed time
 ### 2.14. Compare and manipulate file content
 
 - `cat file`
-  - `cat -d ' ' -f 1 file` - extract 1st column, space separator
-  - `cat -d ',' -f 2 file` - extract 3rd column, comma separator
+  - `cut -d ' ' -f 1 file` - extract 1st column, space separator
+  - `cut -d ',' -f 3 file` - extract 3rd column, comma separator
 - `tac file` - reverse cat
 - `sort file | uniq` - extract unique entries from unsorted file
 - `diff -y file1 file2`
@@ -194,11 +212,14 @@ Modified Time != Changed time
 
 ### 2.15. Demo: Pagers and VI
 
-- `less file`
-  - Up and Down arrow
-  - `/` to find, `n` next, `shift+n` for previous, `--i` to ignore cases - `q` to quit
-- `vi`:
-  - `:linenumber` - to go to specific line
+less/more:
+
+- Up and Down arrow
+- `/` to find, `n` next, `shift+n` for previous, `--i` to ignore cases - `q` to quit
+
+vim`:
+
+- `:[LINENUMBER]` - to go to specific line
 
 ### 2.16. Search file using Grep
 
@@ -210,35 +231,33 @@ Modified Time != Changed time
 
 ### 2.17. Analyse text using basic regular expressions
 
-Regex Operators:
-
 `grep -E` - regex compatible grep:
 
 - `^` - starts with `grep '^sam'`
 - `$` - ends with `grep 'mail$'`
 - `.` - match any one character `grep 'c.t'`
-- `*` - zero or more
+- `*` - zero or more `grep 'let*` will return `le`, `let`, `lett`, etc.
 - `+` - one or more
-- `{}` - previous element can exist x many times `grep '0{3,}'`
+- `{}` - previous element can exist x many times `grep '0{[MIN],[MAX]}'`
 - `?` - optional can character, can be cannot
-- `|` - OR operator `grep -E enable?|disable?`
+- `|` - OR operator `grep -E enabled?|disabled?`
 - `[]` - range or sets `[a-z][0-9][abz954]` `grep -E 'c[au]t'` `grep -Er '/dev/[a-z]*[0-9]?' /etc/`
 - `()` - subexpressions, to allow expression to repeat 0 or more times `grep -Er '/dev/([a-z]*[0-9]?)*' /etc/`
 - `[^]` - negated ranges or sets
 
-### 2.18. Extended Regular Expressions (13:04)
+### 2.18. Extended Regular Expressions
 
 ### 2.19. Lab: File content, regular expressions
 
-1. While ignoring the case sensitivity, change all values disabled to enabled in /home/bob/values.conf config file.
+1. While ignoring the case sensitivity, change all values disabled to enabled in `/home/bob/values.conf` config file.
     - `sed -i 's/disabled/enabled/gi' /home/bob/values.conf`
-2. Change all values enabled to disabled in /home/bob/values.conf config file from line number 500 to 2000.
+2. Change all values enabled to disabled in `/home/bob/values.conf` config file from line number 500 to 2000.
     - `sed -i '500,2000s/enabled/disabled/g' values.conf`
 3. Replace all occurrence of string #%$2jh//238720//31223 with $2//23872031223 in /home/bob/data.txt file.
     - `sed -i 's^#%$2jh//238720//31223^$2//23872031223^g' data.txt`
 4. Filter out the lines that contain any word that starts with a capital letter and are then followed by exactly two lowercase letters
     - `grep -Ew '[A-Z][a-z]{2}' /etc/nsswitch.conf`
-5. How many lines in /home/bob/testfile file begin with string Section, regardless of case.
+5. How many lines in `/home/bob/testfile` file begin with string Section, regardless of case.
     - `grep -i '^section' testfile > /home/bob/count_lines`
 
 ### 2.20. Archive, backup, compress, unpack, and decompress files
@@ -278,7 +297,7 @@ extract in directory:
 
 To compress and delete the file after:
 
-- `gzip file1` - ca
+- `gzip file1`
 - `bzip2 file1`
 - `xz file1`
 - `zip -r archive file/folder/`
@@ -290,9 +309,15 @@ To Decompress and delete the compressed after:
 - `xz  --decompress file1.xz`
 - `unzip -r file1.zip`
 
+To Decompress and leave the compressed after:
+
+- `gzip --keep file1.gz`
+- `bzip2 --keep file1.bz2`
+- `xz  --keep file1.xz`
+
 `gzip`, `bzip2` and `zx` can work with files only, not directories, which is the reason why they are combined w/ tar files.
 
-### combine tar and archive
+combine tar archive and compress:
 
 - `tar --create --gzip --file arhive.tar.gz file1`
 - `tar --create --bzip2 --file arhive.tar.bzip2 file1`
@@ -306,7 +331,7 @@ To Decompress and delete the compressed after:
 dick imaging:
 
 - `dd` for bit by bit copy, unmount the disk or image
-- `sudo dd if=/dev/vda of=diskimage.raw bs=1M status=progress`
+- `sudo dd if=/dev/vda of=diskimage.raw bs=1M status=progress` to archive
 - `sudo dd if=diskimage.raw of=/dev/vda  bs=1M status=progress` to restore
 
 ### 2.23. Use input-output redirection
