Change 2. Essential Commands img path

--- a/2. Essential Commands.md
+++ b/2. Essential Commands.md
@@ -59,9 +59,9 @@ SSH = Secure SHell, all data is encrypted.
 - `stat` - details about the file, including Inode
 - `ln [TARGET-FILE] [LINKED-FILE]` - to link file to actual bytes on drive, after which `stat` command will show that there are 2 links
 
-![stat](2022-04-28-10-31-53.png)
+![stat](./img/2/2022-04-28-10-31-53.png)
 
-![stat2](2022-04-28-10-33-06.png)
+![stat2](./img/2/2022-04-28-10-33-06.png)
 
 Limitations:
 
@@ -134,14 +134,14 @@ SUID - Set User ID - when file is executed it will be executed as SUID not as pe
 - `chmod 4664 filename`
 - `chmod 4764 filename`
 
-![SUID](2022-04-28-14-35-18.png)
+![SUID](./img/2/2022-04-28-14-35-18.png)
 
 SGID - Set Group ID:
 
 - `chmod 2664 filename`
 - `chmod 2674 filename`
 
-![SGID](2022-04-28-14-37-39.png)
+![SGID](./img/2/2022-04-28-14-37-39.png)
 
 Possible to specify both SUID and SGID using - `chmod +6000 filename`
 
@@ -151,7 +151,7 @@ Sticky Bit - specified on shared directory, which allows only a user that owns a
 - `chmod +t stickydir` or
 - `chmod 1777 stickydir`
 
-![sticky](2022-04-28-14-44-40.png)
+![sticky](./img/2/2022-04-28-14-44-40.png)
 
 ### 2.12. Search for files
 
@@ -191,7 +191,7 @@ Modified Time != Changed time:
 1. Find files/directories under /var/log/ directory that the group can write to, but others cannot read or write to it.
     - `sudo find /var/log/ -perm -g=w -not -perm /o=rw`
 
-2. Add the permissions for setuid, setgid and sticky bit on /home/bob/datadir directory.
+2. Add the permissions for SUID, SGID and sticky bit on /home/bob/datadir directory.
     - `chmod +7000 /home/bob/datadir/`
 3. Find cats.txt file under bob's home directory and copy it into /opt directory.
     - `sudo find /home/bob/ -name 'cats.txt' -exec cp {} /opt \;`
@@ -342,7 +342,7 @@ dick imaging:
 - `1>` output redirection overwrite from STDOUT
 - `2>` output redirection overwrite from STDERR
 
-![STD](2022-04-29-12-37-35.png)
+![STD](./img/2/2022-04-29-12-37-35.png)
 
 - `grep -r '^The' /etc/ 2> /dev/null` to redirect errors permissions denied errors
   - `/dev/null` - black hole of the Linux
