Reviewed text content in  2. Essential Commands

--- a/2. Essential Commands.md
+++ b/2. Essential Commands.md
@@ -22,10 +22,10 @@
 
 - `ip a` to see local IP address
 
-SSH = Secure SHell, all data is encrypted.
+SSH = Secure SHell, Secure b/c all data is encrypted:
 
-- `ssh daemon` on server listens for incoming connections
-- `ssh client` to login to server
+- SSH daemon - listens for incoming connections
+- SSH client - to login to server
 - `ssh username@ipaddress` to connect to server
 
 ### 2.02. Demo: Log into local & remote graphical and text mode consoles
@@ -34,10 +34,9 @@ SSH = Secure SHell, all data is encrypted.
 
 - `<COMMAND> --help` - condensed form of help
 - `man <COMMAND>` - manual pages
-- `apropos <verb>` - how to do search for particular function
-  - `sudo mandb` - initiate database for `apropos`
-  - `apropos -s1,8 hostname`
-- tab auto-completions
+- `apropos <SEARCH-TEXT>` - how to do search for particular function
+  - `apropos -s 1,8 hostname`
+- `sudo mandb` - initiate database for `apropos`
 
 ### 2.04. Join Our Slack Channel
 
@@ -89,7 +88,7 @@ Considerations:
 - `chgrp [GROUP] [FILE/DIRECTOY]` to change group for the file/directory
   - we can only change to groups, to which user is part of
 - `groups [USER]` - to see which groups user is part of
-- `sudo chwon [USER] [FILE/DIRECTOY]` to change owner.  root command
+- `sudo chwon [USER] [FILE/DIRECTOY]` to change owner. Root command only
 - `sudo chwon [USER]:[GROUP] [FILE/DIRECTOY]` to change owner and group for the file/directory.  root command.
 
 - `ls -l` also shows permissions for the file/directory: type-user-group-others
@@ -118,7 +117,7 @@ permissions for directories:
 
 Permissions are evaluated from left to write, meaning if owner has lower set of permissions, than group (where he is part of), he will have only the lower set of permissions.
 
-`chmod permissions file/folder`
+- `chmod permissions file/folder`
 
 - `chmod u+rw cat.jpg` - add permissions
 - `chmod u-w cat.jpg` - to remove permissions
@@ -190,7 +189,6 @@ Modified Time != Changed time:
 
 1. Find files/directories under /var/log/ directory that the group can write to, but others cannot read or write to it.
     - `sudo find /var/log/ -perm -g=w -not -perm /o=rw`
-
 2. Add the permissions for SUID, SGID and sticky bit on /home/bob/datadir directory.
     - `chmod +7000 /home/bob/datadir/`
 3. Find cats.txt file under bob's home directory and copy it into /opt directory.
@@ -199,9 +197,9 @@ Modified Time != Changed time:
 ### 2.14. Compare and manipulate file content
 
 - `cat file`
-  - `cut -d ' ' -f 1 file` - extract 1st column, space separator
-  - `cut -d ',' -f 3 file` - extract 3rd column, comma separator
 - `tac file` - reverse cat
+- `cut -d ' ' -f 1 file` - extract 1st column, space separator
+- `cut -d ',' -f 3 file` - extract 3rd column, comma separator
 - `sort file | uniq` - extract unique entries from unsorted file
 - `diff -y file1 file2`
 - `tail file` - last lines of the file
@@ -361,10 +359,6 @@ sort << EOF
 > 1
 > EOF
 ```
-
-#### piping
-
-- `grep -v '^#' /etc/login.defs | sort | columm -t`
 
 ### 2.24. Lab: Archive, Backup, Compress, IO Redirection
 
