Small text updates in 3. Operation of Running Syst

--- a/3. Operation of Running Systems.md
+++ b/3. Operation of Running Systems.md
@@ -21,9 +21,9 @@
 
 ### 3.01. Boot, reboot, and shutdown a system safely
 
-- `sudo systemctl reboot/poweroff` - to reboot/shutdown as non-root user
-- `sudo systemctl reboot/poweroff --force` - to force reboot/shutdown as non-root user
-- `sudo systemctl poweroff --force --force` - to double force  reboot/shutdown as non-root user
+- `sudo systemctl reboot/poweroff` - to reboot/shutdown
+- `sudo systemctl reboot/poweroff --force` - to force reboot/shutdown
+- `sudo systemctl poweroff --force --force` - to double force  reboot/shutdown
 - `sudo shutdown 02:00` - to schedule a shutdown at a specific time
 - `sudo shutdown -r 02:00` - to schedule a reboot at a specific time
 - `sudo shutdown 02:00 'scheduled shutdown for offline-backup'` - to add a wall message to a scheduled shutdown
@@ -32,10 +32,10 @@
 
 - `systemctl get-default` to view default boot target
 - `sudo systemctl set-default multi-user.target` to change default boot target
-  - `graphical.target` - allows for multi users, disables graphical user interface
+  - `graphical.target` - allows for multi users, enables graphical user interface
   - `multi-user.target` - allows for multi users, disables graphical user interface
   - `emergency.target` - load as few programs as possible
-  - `rescue.target` - target somewhere b/w emergency and multi-user
+  - `rescue.target` - target somewhere b/w emergency and multi-user, dropped in the root shell
 - `sudo systemctl isolate graphical.target` to switch temporary w/o reboot to other target
 
 ### 3.03. Install, configure and troubleshoot bootloaders
@@ -58,7 +58,7 @@ Bootloaders = starts Linux Kernel, GRUB = one of the most popular bootloader.
 # script.sh
 #!/bin/bash <- shabang line
 
-# comment  line
+# comment line
 
 date >> /tmp/script.log
 cat /proc/version >> /tmp/script.log
@@ -108,9 +108,11 @@ else
 fi
 ```
 
+Bash scripting cheat sheet - `cat /etc/cron.hourly/0anacron`
+
 ### 3.06. Manage the startup process and services (In Services Configuration)
 
-init - initialization system for starting following units:
+init system - initialization system for starting following units:
 
 - service
 - sockets
@@ -234,7 +236,7 @@ There are 3 common ways how to schedule tasks on Linux:
 
 ![crontab](./img/3/2022-05-12-10-03-36.png)
 
-- `35 6 * * *` - when cron job should be run
+- `35 6 * * *` - when cron job should be run - min, hour, day, month, day of week
   - `*` - match all possible values (every hour)
   - `,` - specifies multiple values (15,45)
   - `-` - specifies range of values (2-4)
@@ -242,21 +244,23 @@ There are 3 common ways how to schedule tasks on Linux:
 - `root` - username
 - `/bin/some_command --some_options` - command that should be run
 
-- `which` to identify full path of app
-- `crontab -e` to modify user crontab
+How to work with cron:
+
+- `which` - identify full path of app
+- `crontab -e` - modify user crontab
 - `35 6 * * * /usr/bin/touch test_passed`
-- `crontab -l` to see the crontab for the current user
-- `sudo crontab -l` to see the crontab for the root user
-- `sudo crontab -e -u [USER]` to edit crontab for other user
-- `sudo crontab -r` to remove crontab
-- `sudo crontab -r -u [USER]` to remove crontab for specific user
+- `crontab -l` - see the crontab for the current user
+- `sudo crontab -l` - see the crontab for the root user
+- `sudo crontab -e -u [USER]` - edit crontab for other user
+- `sudo crontab -r` - remove crontab
+- `sudo crontab -r -u [USER]` - remove crontab for specific user
 
 Alternative to adding tasks to cron is to use folders:
 
-- /etc/cron.hourly/
-- /etc/cron.daily/
-- /etc/cron.weekly/
-- /etc/cron.monthly/
+- `/etc/cron.hourly/`
+- `/etc/cron.daily/`
+- `/etc/cron.weekly/`
+- `/etc/cron.monthly/`
 
 Shell script should not contain any extension (like `.sh`) to be able to run in cron.
 
@@ -300,7 +304,7 @@ working w/ anacron:
 
 - `grep cron /var/log/cron`
 - `grep anacron /var/log/cron`
-- `grep atd /var /log/cron`
+- `grep atd /var/log/cron`
 
 ### 3.13. Lab: Schedule Tasks and Verify Completion of Scheduled Jobs
 
@@ -333,7 +337,7 @@ newer CentOS versions use `dnf` instead of `yum`:
 ### 3.16. Identify the component of a Linux distribution that a file belongs to
 
 - `sudo dnf provides /etc/anacrontab` - provides info which package installs the file
-- `sudo dnf provides docker` - provides info which package provides the command
+- `sudo dnf provides docker` - provides info which package contains a certain utility
 - `dnf repoquery --list nginx` list of files contained in a package
 
 ### 3.17. Lab: Update, manage software, identify component
