Small text updates in 4. User and Group Management

--- a/4. User and Group Management.md
+++ b/4. User and Group Management.md
@@ -127,7 +127,7 @@ date >> $HOME/lastlogin
 
 ### 4.05. Manage template user environment
 
-- add `README` file to the `/etc/skel` so that the file is copied to all new users
+- add `README` file to the `/etc/skel` so that the file is copied to all new users home dir.
 
 ### 4.06. Lab: Manage system-wide environment profiles and template user environments
 
@@ -157,7 +157,7 @@ Trinity can open 3 processes at a given time
 
 ![ulimit -a](./img/4/2022-05-20-17-20-35.png)
 
-- `ulimit -u 5000` to update soft limits
+- `ulimit -u 5000` to update soft limit in CLI
 
 ### 4.08. Manage user privileges
 
@@ -181,9 +181,9 @@ To add a line in sodoers that developers group can execute commands as sudo:
 
 - `%developers ALL=(ALL) ALL`
 
-Execute command as different user:
+Execute command as different user in CLI:
 
--  
+- `sudo -u [USER] [COMMAND]`
 
 To add a line in sodoers that trinity can only run commands as aaron  or john:
 
@@ -238,5 +238,3 @@ With PAM we can tell `su` utility to authenticate us in a different way, than pr
 ![man pam](./img/4/2022-05-21-12-48-55.png)
 
 ### 4.12. Lab: Manage access to the root account and configure PAM
-
-### 4.13. Feedback
