Small text updates in 5. Networking.md

--- a/5. Networking.md
+++ b/5. Networking.md
@@ -83,7 +83,7 @@ In RedHat family a program Network Manager is default for managing network relat
 To check additional information for running services:
 
 - `systemctl status chronyd`
-- `systemctl status ssh`
+- `systemctl status sshd`
 - `ps [PID mentioned in ss command]`
 - `sudo lsof -p [PID mentioned in ss command]`
 
@@ -102,10 +102,10 @@ To enhance security, a firewall can be added to a system and this firewall will 
 
 For example a computer w/ wireless network card and a wired network card. We could specify a zone for:
 
-- create drop zone to  wireless network interface, blocking all incoming traffic
-- add trusted zone to wired network interface, allowing all incoming traffic.
+- create **drop zone** to  wireless network interface, blocking all incoming traffic
+- add **trusted zone** to wired network interface, allowing all incoming traffic.
 
-Default zone is public, which blocks every incoming connection, except what we choose to allow.
+Default zone is **public**, which blocks every incoming connection, except what we choose to allow.
 
 - `firewall-cmd  --get-default-zone` - checks for default zone
 - `firewall-cmd  --set-default-zone=public` - sets default zone for the interface
