Small text updates in 6. Service Configuration

--- a/6. Service Configuration.md
+++ b/6. Service Configuration.md
@@ -19,7 +19,7 @@
 
 ## 6. Service Configuration
 
-### 6.01. Configure a caching DNS server (08:49)
+### 6.01. Configure a caching DNS server
 
 Bind is a popular app for hosting a DNS server.
 
@@ -28,7 +28,7 @@ Bind is a popular app for hosting a DNS server.
 
 To change Bind config
 
-1. `ip a` - get ip of the VM
+1. `ip a` - get IP address of the VM
 2. `sudo vi /etc/named.conf` - edit the bind config file
 3. `man named.conf` - to see options of the file
 
@@ -53,7 +53,7 @@ To start and enable bind:
 - `sudo firewall-cd --add-service=dns --permanent`
 - `dig @localhost google.com` and `dig @localhost google.com` - to verify if bind is working as expected, check for query time, it should be `0 msec` for 2nd query.
 
-### 6.02. Maintain a DNS zone (21:02)
+### 6.02. Maintain a DNS zone
 
 - Domain Name System (DNS) or nameserver = phone book of the internet.
 - DNS contains data associated with the certain domain.
